syntax = "proto3";
option go_package = "https://github.com/uz2020/petty/pb/games/xq";
package xq;

service Game {
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Logout (LogoutRequest) returns (LogoutResponse) {}
  rpc GuestLogin (GuestLoginRequest) returns (GuestLoginResponse) {}
  rpc Register (RegisterRequest) returns (RegisterResponse) {}  
  
  rpc MyStatus (MyStatusRequest) returns (stream MyStatusResponse) {}

  rpc GetTables (TablesRequest) returns (TablesReply) {}
  rpc CreateTable (CreateTableRequest) returns (CreateTableResponse) {}
  rpc JoinTable (JoinTableRequest) returns (JoinTableResponse) {}
  rpc LeaveTable (LeaveTableRequest) returns (LeaveTableResponse) {}
  
  rpc StartGame (StartGameRequest) returns (StartGameResponse) {}
  rpc Move (MoveRequest) returns (MoveResponse) {}

  rpc GetMyProfile (GetMyProfileRequest) returns (GetMyProfileResponse) {}
  rpc GetPlayer (GetPlayerRequest) returns (GetPlayerResponse) {}

  rpc MakeFriend (MakeFriendRequest) returns (MakeFriendResponse) {} // 请求添加好友
  rpc AcceptFriend (AcceptFriendRequest) returns (AcceptFriendResponse) {} // 接受添加好友申请
  rpc StarPlayer (StarPlayerRequest) returns (StarPlayerResponse) {} // 关注用户
  rpc DeleteFriend (DeleteFriendRequest) returns (DeleteFriendResponse) {} // 删除好友
}

message LogoutRequest {}
message LogoutResponse {}

message LoginRequest {
  string username = 1;
  string passwd = 2;
}
message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string username = 1;
  string passwd = 2;
}
message RegisterResponse {}


message GuestLoginRequest {}
message GuestLoginResponse {
  string token = 1;
}

message MyStatusRequest {}
message MyStatusResponse {
  int64 time = 1;
  int64 move = 2;
}

message Table {
  string tableId = 1;
  string name = 2;
  User owner = 3;
}

message TablesRequest {}
message TablesReply {
  repeated Table tables = 1;
}

message JoinTableRequest {
  string tableId = 1;
}
message JoinTableResponse {
}
message LeaveTableRequest {
  string tableId = 1;
}
message LeaveTableResponse {}

message StartGameRequest {
  string tableId = 1;
}
message StartGameResponse {
}

message MoveRequest {
  string tableId = 1;
  int64 move = 2;
}
message MoveResponse {}

message CreateTableRequest {
  string name = 1;
}
message CreateTableResponse {
  string tableId = 1;
}

message User {
  string userId = 1;
  string username = 2;
}

message Player {
  User user = 1;
}

message GetMyProfileRequest {}
message GetMyProfileResponse {
  Player player = 1;
}

message GetPlayerRequest {
  string userId = 1;
}
message GetPlayerResponse {
  Player player = 1;
}

message MakeFriendRequest {
  string userId = 1;
  string reqMsg =2;
}
message MakeFriendResponse {}

message AcceptFriendRequest {
  string userId = 1;
}
message AcceptFriendResponse {}


message StarPlayerRequest {
  string userId = 1;
}
message StarPlayerResponse {}

message DeleteFriendRequest {
  string userId = 1;
}
message DeleteFriendResponse {}
